--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-    <meta name="google-site-verification" content="d1mgvYymY1hPvJcf0buZ-4e8RMETSFNRFz6aeD4BueI"/>
-    <meta name="description" content="A Cards Against Humanity clone and fork of the original Pretend You're Xyzzy"/>
+    <meta name="google-site-verification" content="IH6Fmwx4VjjupJEBF3SqexDGym1gsOuiiJJ5QEP8oF8"/>
+    <meta name="description" content="A Dockerized Cards Against Humanity clone and fork of the original Pretend You're Xyzzy"/>
     <title>PYX-Reloaded</title>
     <link rel="icon" href="/css/images/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="/css/images/icon-32x32.png">
@@ -42,8 +42,7 @@
                 </section>
                 <section class="mdc-card__supporting-text mdc-layout-grid">
                     <h3 class="mdc-typography--body1 mdc-typography--adjust-margin">You can login without an account by
-                        putting your nickname ONLY down here. If you want to create a personal account either register
-                        with PYX or a social network.</h3>
+                        putting your nickname ONLY down here.</h3>
                     <div class="mdc-layout-grid__inner">
                         <label class="mdc-text-field mdc-layout-grid__cell mdc-layout-grid__cell--span-6"
                                style="margin-top: 0"
@@ -120,22 +119,17 @@
                     <h1 class="mdc-card__title mdc-typography--title">About PYX Reloaded</h1>
                 </section>
                 <section class="mdc-card__supporting-text mdc-typography--body1">
-                    PYX Reloaded is a fork of the original game overhauled and revamped by <a
+                    PYX Reloaded and Dockerized is a docker of a fork of the original game overhauled and revamped by <a
                         href="https://github.com/mgagemorgan" target="_blank" rel="noopener">@mgagemorgan</a> and
                     <a href="https://github.com/devgianlu" target="_blank" rel="noopener">@devgianlu</a> on GitHub. The
                     goal of
                     this project is to overhaul the entire interface, and revamp the backend so that it works
-                    out-of-the-box. Eventually, there are goals for social media integration, accounts, chat
-                    features and administration thereof, and mobile support. @devgianlu has an <a
-                        href="https://play.google.com/store/apps/details?id=com.gianlu.pretendyourexyzzy"
-                        target="_blank" rel="noopener">Android client</a> that works great and is recommended for anyone
-                    on
-                    Android.
+                    out-of-the-box.
                 </section>
                 <section class="mdc-card__actions">
                     <a class="mdc-button mdc-button--compact mdc-card__action"
                        data-mdc-auto-init="MDCRipple" target="_blank" rel="noopener"
-                       href="https://github.com/devgianlu/PYX-Reloaded/">
+                       href="https://github.com/Tysseract/PYX-Reloaded/">
                         We're on GitHub!!
                     </a>
                 </section>
